# simple_automation

./: .gitignore  README.md  global_tile_coord.json  lat_lon_global_config.json  target_selection.py
generate_global_tiles/: update_map.py
pointcloud_2_laserscan/: CMakeLists.txt  package.xml
pointcloud_2_laserscan/include/: pointcloud_to_laserscan.hpp
pointcloud_2_laserscan/src/: pointcloud_to_laserscan.cpp
pointcloud_to_laserscan/: CMakeLists.txt
pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_sim_time.launch  sample_node.launch
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node_backup  pointcloud_to_laserscan_nodelet.cpp
robo_bringup/: CMakeLists.txt  TODO  package.xml
robo_bringup/launch/: pointcloud_to_laserscan.launch  robo_bringup_all.launch  robo_camera_launch.launch  robo_control_launch.launch  robo_detection_launch.launch  robo_gps_imu_launch.launch  robo_lidar_launch.launch  robo_lidar_left_launch.launch  robo_lidar_right_launch.launch  robo_sensor_lidar_launch.launch  robo_stati_urdf_launch.launch  robo_ui_launch.launch  sample_node.launch
robo_bringup/params/: topic_names.yaml
robo_bringup/urdf/: skidsteerV1.urdf
robo_control/: CMakeLists.txt  README.md  package.xml
robo_control/include/: controlcan.h  diff_drive_control.h  j1939_generate.h  joystick.h
robo_control/src/: CAN_transmit.cpp  diff_drive_control.cpp  j1939_generate_test  j1939_generate_test.cpp  key_publisher.py  readme.txt
robo_decision/: CMakeLists.txt  PlaceHolder.txt  config.json  package.xml
robo_decision/include/: json.hpp  robo_decision.h
robo_decision/src/: robo_decision.cc  robo_decision_node.cc
robo_detection/: CMakeLists.txt  detection_config.ini  object_pose_estimation.py  package.xml  target_pose_process.py  test_target_pose_process.py  yolo5_detect.py
robo_detection/config/: config.json  detection_config.ini  detection_config.yaml  frames.gv  pose_process_config.yaml
robo_detection/customized_msg/: pose_msg.msg
robo_detection/src/: maskrcnn_detect.py  maskrcnn_test.py  object_pose_estimation.py  target_pose_process.py  yolo5_detect.py
robo_detection/yolov5/: detection_config.ini
robo_lidar/launch/: livox_lidar.launch  livox_lidar_rviz.launch
robo_planning/: CMakeLists.txt  package.xml
robo_planning/config/: base_local_planner_params.yaml  (+3 more)
robo_sensor/: CMakeLists.txt  package.xml
robo_ui/: CMakeLists.txt  package.xml  target_selection.py
simple_automation/: CMakeLists.txt  package.xml
(+35 files in other folders)
