<package>
    <name>robo_decision</name>
    <version>1.0.0</version>
    <description>
        The robo planning package provides behaviour tree
    </description>
    <author>Robolution</author>
    <maintainer email="admin@robolution.ca">Robolution</maintainer>
    <license>GPL 3.0 </license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>move_base_msgs</build_depend>
    

    <run_depend>move_base_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>


    <export>
    </export>

</package>
