
<package>
    <name>simple_automation</name>
    <version>1.0.0</version>
    <description>
        This metapackage provides all the functionality for simple_automation
    </description>
    <author>Robolution Technologies Inc.</author>
    <maintainer email="info@robolution.ca">Robolution</maintainer>
    <license>GPL 3.0</license>
    <url>https://github.com/Robolution-Tech/simple_automation</url>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>robo_base</run_depend>
    <run_depend>robo_bringup</run_depend>
    <run_depend>robo_decision</run_depend>
    <run_depend>robo_localization</run_depend>
    <run_depend>robo_planning</run_depend>
    <run_depend>robo_detection</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
